--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,6 @@ a {
 
 /* Упрощаем работу с изображениями */
 img {
-    max-width: 100%;
     display: block;
 }
 
@@ -261,6 +260,21 @@ header:hover {
     display: none;
 }
 
+.header__content-secret .header__sec nav button {
+    display: none;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 11px;
+    line-height: 13px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    padding: 14px 35px;
+    background-color: rgba(255, 255, 255, 0);
+    border: 1px solid #ccc;
+}
+
 .swipers {
     overflow: hidden;
     position: relative;
@@ -370,7 +384,7 @@ header:hover {
     color: #FFFFFF;
 }
 
-.swipers__info-text .swipers__info-title span {
+.swipers__info-text .swipers__info-title .span-title {
     display: block;
 }
 
@@ -456,7 +470,7 @@ header:hover {
     position: absolute;
     left: 0;
     bottom: 40px;
-    width: 60%;
+    width: 100%;
     z-index: 4;
     pointer-events: none;
 }
@@ -466,8 +480,10 @@ header:hover {
     display: flex;
     -ms-flex-align: center;
     align-items: center;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
+}
+
+.swipers .swipers-bottom .swipers-bottom-cont .swipers-bottom-language {
+    margin-right: 80px;
 }
 
 .swipers .swipers-bottom .swipers-bottom-cont .swipers-bottom-language a {
@@ -488,6 +504,7 @@ header:hover {
 
 .swipers .swipers-bottom .swipers-bottom-cont .swipers-bottom-country {
     position: relative;
+    margin-right: 40px;
 }
 
 .swipers .swipers-bottom .swipers-bottom-cont .swipers-bottom-country select {
@@ -510,7 +527,7 @@ header:hover {
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 5px 40px 5px 30px;
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255, 0);
     box-shadow: 0px 1.15336px 1.22544px rgba(0, 0, 0, 0.2), inset 0px -0.288339px 0.0720847px rgba(255, 255, 255, 0.23);
 }
 
@@ -554,6 +571,15 @@ header:hover {
     right: 13px;
 }
 
+.swipers .swipers-bottom .swipers-bottom-cont .swipers-flex {
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.swipers .swipers-bottom .swipers-bottom-cont .swipers-bottom-phone {
+    margin-right: 40px;
+}
+
 .swipers .swipers-bottom .swipers-bottom-cont .swipers-bottom-phone a {
     pointer-events: painted;
     font-family: "Montserrat";
@@ -584,10 +610,13 @@ header:hover {
     color: black;
 }
 
+.philosophy .container {
+    padding-right: 0;
+}
+
 .philosophy__content {
     padding-top: 140px;
     padding-bottom: 78px;
-    padding-left: 100px;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: justify;
@@ -659,20 +688,20 @@ header:hover {
 }
 
 .philosophy__bottom {
-    padding-left: 100px;
+    margin-top: 100px;
     padding-bottom: 140px;
     display: -ms-flexbox;
     display: flex;
 }
 
-.philosophy__bottom-img {
+.philosophy__bottom-img .img-position-block {
     position: relative;
 }
 
-.philosophy__bottom-img .img-position {
+.philosophy__bottom-img .img-block-flex {
     position: absolute;
-    right: -200px;
-    top: -140px;
+    top: -100px;
+    left: 200px;
 }
 
 .philosophy__bottom-text {
@@ -702,4 +731,490 @@ header:hover {
     height: 44px;
     top: 0;
     left: -32px;
+}
+
+.projects__text {
+    margin-top: 140px;
+}
+
+.projects__text-title {
+    cursor: default;
+    text-align: center;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 44px;
+}
+
+.projects__text-text {
+    max-width: 450px;
+    margin: 0 auto;
+    margin-top: 35px;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 24px;
+    text-align: center;
+    cursor: default;
+  /* 5 */
+    color: #828282;
+}
+
+.projects img {
+    max-width: 100%;
+}
+
+.projects__top {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -ms-flex-align: center;
+    align-items: center;
+    margin-top: 120px;
+    margin-bottom: 10px;
+}
+
+.projects__top-one {
+    width: 49%;
+    position: relative;
+    height: 100%;
+}
+
+.projects__top .projects__top-one-shadow {
+    padding: 32px 32px;
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    transition: all 0.3s;
+}
+
+.projects__top .projects__top-one-shadow .shadow-info {
+    display: -ms-flexbox;
+    display: flex;
+    cursor: default;
+}
+
+.projects__top .projects__top-one-shadow .shadow-info .info-center {
+    margin: 0 18px;
+}
+
+.projects__top .projects__top-one-shadow .projects__top-one-shadow-bottom {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 10;
+    width: 100%;
+    padding: 32px 32px;
+    transition: all 0.3s;
+}
+
+.projects__top .projects__top-one-shadow .projects__top-one-shadow-bottom h3 {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 126%;
+  /* identical to box height, or 25px */
+    color: #FAFAFA;
+    margin-bottom: 25px;
+}
+
+.projects__top .projects__top-one-shadow .projects__top-one-shadow-bottom a {
+    display: block;
+    position: relative;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 12px;
+    letter-spacing: 0.12em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.projects__top .projects__top-one-shadow .projects__top-one-shadow-bottom a::after {
+    content: "";
+    position: absolute;
+    width: 63px;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.4);
+    left: 130px;
+    top: 50%;
+}
+
+.projects__top .projects__top-one-shadow:hover {
+    opacity: 1;
+    background-color: rgba(61, 60, 60, 0.8);
+}
+
+.projects__top-two {
+    width: 49%;
+    position: relative;
+}
+
+.projects__top-two .projects__top-one-shadow {
+    padding: 32px 32px;
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    transition: all 0.3s;
+}
+
+.projects__top-two .projects__top-one-shadow .shadow-info {
+    display: -ms-flexbox;
+    display: flex;
+    cursor: default;
+}
+
+.projects__top-two .projects__top-one-shadow .shadow-info .info-center {
+    margin: 0 18px;
+}
+
+.projects__top-two .projects__top-one-shadow .projects__top-one-shadow-bottom {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 10;
+    width: 100%;
+    padding: 32px 32px;
+    transition: all 0.3s;
+}
+
+.projects__top-two .projects__top-one-shadow .projects__top-one-shadow-bottom h3 {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 126%;
+  /* identical to box height, or 25px */
+    color: #FAFAFA;
+    margin-bottom: 25px;
+}
+
+.projects__top-two .projects__top-one-shadow .projects__top-one-shadow-bottom a {
+    display: block;
+    position: relative;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 12px;
+    letter-spacing: 0.12em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.projects__top-two .projects__top-one-shadow .projects__top-one-shadow-bottom a::after {
+    content: "";
+    position: absolute;
+    width: 63px;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.4);
+    left: 130px;
+    top: 50%;
+}
+
+.projects__top-two .projects__top-one-shadow:hover {
+    opacity: 1;
+    background-color: rgba(61, 60, 60, 0.8);
+}
+
+.projects__middle {
+    margin-bottom: 10px;
+    position: relative;
+}
+
+.projects__middle img {
+    width: 100%;
+}
+
+.projects__middle .projects__top-one-shadow {
+    padding: 32px 32px;
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    transition: all 0.3s;
+}
+
+.projects__middle .projects__top-one-shadow .shadow-info {
+    display: -ms-flexbox;
+    display: flex;
+    cursor: default;
+}
+
+.projects__middle .projects__top-one-shadow .shadow-info .info-center {
+    margin: 0 18px;
+}
+
+.projects__middle .projects__top-one-shadow .projects__top-one-shadow-bottom {
+    position: absolute;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    left: 0;
+    bottom: 0;
+    z-index: 10;
+    width: 100%;
+    padding: 32px 32px;
+    transition: all 0.3s;
+}
+
+.projects__middle .projects__top-one-shadow .projects__top-one-shadow-bottom h3 {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 126%;
+  /* identical to box height, or 25px */
+    color: #FAFAFA;
+    margin-bottom: 25px;
+}
+
+.projects__middle .projects__top-one-shadow .projects__top-one-shadow-bottom h3 span {
+    display: block;
+}
+
+.projects__middle .projects__top-one-shadow .projects__top-one-shadow-bottom a {
+    display: block;
+    text-align: right;
+    padding-right: 100px;
+    position: relative;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 12px;
+    letter-spacing: 0.12em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.projects__middle .projects__top-one-shadow .projects__top-one-shadow-bottom a::after {
+    content: "";
+    position: absolute;
+    width: 63px;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.4);
+    left: 60%;
+    top: 50%;
+}
+
+.projects__middle .projects__top-one-shadow:hover {
+    opacity: 1;
+    background-color: rgba(61, 60, 60, 0.8);
+}
+
+.projects .projects__middle-shadow {
+    display: none;
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.projects .projects__middle-shadow img {
+    width: 100%;
+}
+
+.projects .projects__middle-shadow .projects__top-one-shadow {
+    padding: 32px 32px;
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    transition: all 0.3s;
+}
+
+.projects .projects__middle-shadow .projects__top-one-shadow .shadow-info {
+    display: -ms-flexbox;
+    display: flex;
+    cursor: default;
+}
+
+.projects .projects__middle-shadow .projects__top-one-shadow .shadow-info .info-center {
+    margin: 0 18px;
+}
+
+.projects .projects__middle-shadow .projects__top-one-shadow .projects__top-one-shadow-bottom {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 10;
+    width: 100%;
+    padding: 32px 32px;
+    transition: all 0.3s;
+}
+
+.projects .projects__middle-shadow .projects__top-one-shadow .projects__top-one-shadow-bottom h3 {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 126%;
+  /* identical to box height, or 25px */
+    color: #FAFAFA;
+    margin-bottom: 25px;
+}
+
+.projects .projects__middle-shadow .projects__top-one-shadow .projects__top-one-shadow-bottom a {
+    display: block;
+    position: relative;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 12px;
+    letter-spacing: 0.12em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.projects .projects__middle-shadow .projects__top-one-shadow .projects__top-one-shadow-bottom a::after {
+    content: "";
+    position: absolute;
+    width: 63px;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.4);
+    left: 130px;
+    top: 50%;
+}
+
+.projects .projects__middle-shadow .projects__top-one-shadow:hover {
+    opacity: 1;
+    background-color: rgba(61, 60, 60, 0.8);
+}
+
+.projects__bottom {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    height: 100%;
+}
+
+.projects__bottom-one {
+    width: 49%;
+    position: relative;
+    height: 100%;
+}
+
+.projects__bottom-one img {
+    width: 100%;
+}
+
+.projects__bottom .projects__top-one-shadow {
+    padding: 32px 32px;
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    transition: all 0.3s;
+}
+
+.projects__bottom .projects__top-one-shadow .shadow-info {
+    display: -ms-flexbox;
+    display: flex;
+    cursor: default;
+}
+
+.projects__bottom .projects__top-one-shadow .shadow-info .info-center {
+    margin: 0 18px;
+}
+
+.projects__bottom .projects__top-one-shadow .projects__top-one-shadow-bottom {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 10;
+    width: 100%;
+    padding: 32px 32px;
+    transition: all 0.3s;
+}
+
+.projects__bottom .projects__top-one-shadow .projects__top-one-shadow-bottom h3 {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 126%;
+  /* identical to box height, or 25px */
+    color: #FAFAFA;
+    margin-bottom: 25px;
+}
+
+.projects__bottom .projects__top-one-shadow .projects__top-one-shadow-bottom a {
+    display: block;
+    position: relative;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 12px;
+    letter-spacing: 0.12em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.projects__bottom .projects__top-one-shadow .projects__top-one-shadow-bottom a::after {
+    content: "";
+    position: absolute;
+    width: 63px;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.4);
+    left: 130px;
+    top: 50%;
+}
+
+.projects__bottom .projects__top-one-shadow:hover {
+    opacity: 1;
+    background-color: rgba(61, 60, 60, 0.8);
+}
+
+.projects__bottom-two {
+    display: block;
+    width: 49%;
+    background-color: #FAFAFA;
+}
+
+.projects__bottom-two img {
+    display: block;
+    margin: auto auto;
+}
+
+.projects__bottom-two .prod-gre {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 25px;
+  /* identical to box height */
+    display: block;
+    text-align: center;
+  /* 1 */
+    color: #080808;
+    margin-bottom: 50px;
+    margin-top: 100px;
 }
