--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,6 +275,10 @@ header:hover {
     border: 1px solid #ccc;
 }
 
+.header__content-secret .header__sec-info {
+    display: none;
+}
+
 .swipers {
     overflow: hidden;
     position: relative;
@@ -731,6 +735,43 @@ header:hover {
     height: 44px;
     top: 0;
     left: -32px;
+}
+
+.projects .container {
+    position: relative;
+}
+
+.projects .projects-label {
+    display: block;
+    position: absolute;
+    -webkit-writing-mode: vertical-lr;
+    -ms-writing-mode: tb-lr;
+    writing-mode: vertical-lr;
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+    left: 10px;
+    top: 50px;
+    cursor: default;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 8px;
+    line-height: 14px;
+  /* identical to box height */
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    color: rgba(255, 255, 255, 0.13);
+}
+
+.projects .projects-label:after {
+    content: "";
+    position: absolute;
+    top: -70px;
+    left: 50%;
+    height: 57px;
+    width: 1px;
+    background-color: #828282;
+    background: rgba(255, 255, 255, 0.04);
 }
 
 .projects__text {
@@ -1217,4 +1258,402 @@ header:hover {
     color: #080808;
     margin-bottom: 50px;
     margin-top: 100px;
+}
+
+.images {
+    overflow: hidden;
+}
+
+.images .container {
+    position: relative;
+}
+
+.images .images-label {
+    display: block;
+    position: absolute;
+    cursor: default;
+    left: 10px;
+    top: 250px;
+    -webkit-writing-mode: vertical-lr;
+    -ms-writing-mode: tb-lr;
+    writing-mode: vertical-lr;
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 8px;
+    line-height: 14px;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    color: rgba(255, 255, 255, 0.13);
+}
+
+.images .images-label::before {
+    content: "";
+    position: absolute;
+    top: -70px;
+    left: 50%;
+    height: 57px;
+    width: 1px;
+    background-color: #828282;
+    background: rgba(255, 255, 255, 0.04);
+}
+
+.images__content {
+    position: relative;
+    padding-bottom: 200px;
+    overflow: hidden;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+
+.images__content-left {
+    z-index: 5;
+    pointer-events: none;
+    height: 100%;
+    padding-top: 200px;
+    padding-left: 20px;
+}
+
+.images__content-left p {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 51px;
+  /* 4 */
+    cursor: default;
+    color: #FFFFFF;
+    max-width: 500px;
+}
+
+.images__content-right {
+    z-index: 5;
+    padding-top: 360px;
+    height: 100%;
+    pointer-events: none;
+}
+
+.images__content-right p {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 24px;
+    cursor: default;
+  /* 4 */
+    color: #FFFFFF;
+    max-width: 340px;
+    margin-bottom: 40px;
+}
+
+.images__content-right button {
+    pointer-events: all;
+    cursor: pointer;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 11px;
+    line-height: 13px;
+  /* identical to box height */
+    text-align: center;
+    letter-spacing: 0.06em;
+  /* 1 */
+    color: #080808;
+    padding: 17px 49px;
+}
+
+.images__content .images__position {
+    z-index: 1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.images__content .images__position img {
+    display: block;
+    z-index: 1;
+    transition: all 0.3s;
+}
+
+.images__content .images__position img:nth-child(1) {
+    margin-top: 200px;
+    margin-left: 170px;
+}
+
+.images__content .images__position img:nth-child(1):hover {
+    -webkit-transform: rotate(5deg);
+    transform: rotate(5deg);
+    z-index: 5;
+}
+
+.images__content .images__position img:nth-child(2) {
+    margin-top: 180px;
+    margin-left: -150px;
+}
+
+.images__content .images__position img:nth-child(2):hover {
+    z-index: 5;
+}
+
+.images__content .images__position img:nth-child(3) {
+    margin-top: 150px;
+    margin-left: -150px;
+}
+
+.images__content .images__position img:nth-child(3):hover {
+    -webkit-transform: rotate(5deg);
+    transform: rotate(5deg);
+    z-index: 5;
+}
+
+.images__content .images__position img:nth-child(4) {
+    margin-top: 110px;
+    margin-left: -160px;
+}
+
+.images__content .images__position img:nth-child(4):hover {
+    -webkit-transform: rotate(1deg);
+    transform: rotate(1deg);
+    z-index: 5;
+}
+
+.images__content .images__position img:nth-child(5) {
+    margin-top: 50px;
+    margin-left: -170px;
+}
+
+.images__content .images__position img:nth-child(5):hover {
+    -webkit-transform: rotate(10deg);
+    transform: rotate(10deg);
+    z-index: 5;
+}
+
+.images__content .images__position img:nth-child(6) {
+    margin-top: 10px;
+    margin-left: -190px;
+}
+
+.images__content .images__position img:nth-child(6):hover {
+    -webkit-transform: rotate(5deg);
+    transform: rotate(5deg);
+    z-index: 5;
+}
+
+.images__content .images__position img:nth-child(7) {
+    margin-top: -10px;
+    margin-left: -160px;
+}
+
+.images__content .images__position img:nth-child(7):hover {
+    z-index: 5;
+}
+
+.images__content .images__position img:nth-child(8) {
+    margin-top: -50px;
+    margin-left: -170px;
+}
+
+.images__content .images__position img:nth-child(8):hover {
+    -webkit-transform: rotate(5deg);
+    transform: rotate(5deg);
+    z-index: 5;
+}
+
+.images__content .images__position img:nth-child(9) {
+    margin-top: -100px;
+    margin-left: -170px;
+}
+
+.images__content .images__position img:nth-child(9):hover {
+    -webkit-transform: rotate(1deg);
+    transform: rotate(1deg);
+    z-index: 5;
+}
+
+.images__content .images__position img:nth-child(10) {
+    margin-top: -150px;
+    margin-left: -170px;
+}
+
+.images__content .images__position img:nth-child(10):hover {
+    -webkit-transform: rotate(10deg);
+    transform: rotate(10deg);
+    z-index: 5;
+}
+
+.link {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    min-height: 814px;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    background-color: #fff;
+    width: 100%;
+    height: 100%;
+}
+
+.link a {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 68px;
+  /* identical to box height */
+    z-index: 8;
+  /* 1 */
+    color: #080808;
+}
+
+.link p {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 24px;
+    max-width: 390px;
+    text-align: center;
+    margin-top: 18px;
+    color: #080808;
+    z-index: 8;
+    opacity: 0.6;
+}
+
+.link ul {
+    width: 100%;
+    max-width: 1400px;
+    height: 814px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    -webkit-transform: translate(-50%);
+    transform: translate(-50%);
+}
+
+.link ul li {
+    position: absolute;
+    list-style: none;
+}
+
+.link ul li:nth-child(1) {
+    top: 62px;
+    left: 73%;
+    width: 271px;
+    height: 180px;
+}
+
+.link ul li:nth-child(1) img {
+    width: 100%;
+    height: 100%;
+}
+
+.link ul li:nth-child(2) {
+    top: 0;
+    left: 53%;
+    -webkit-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    width: 348px;
+    height: 231px;
+}
+
+.link ul li:nth-child(2) img {
+    width: 100%;
+    height: 100%;
+}
+
+.link ul li:nth-child(3) {
+    top: 62px;
+    left: 10%;
+    width: 271px;
+    height: 180px;
+}
+
+.link ul li:nth-child(3) img {
+    width: 100%;
+    height: 100%;
+}
+
+.link ul li:nth-child(4) {
+    top: 184px;
+    left: 0;
+    width: 348px;
+    height: 231px;
+    -webkit-transform: translate(-30%, 0);
+    transform: translate(-30%, 0);
+}
+
+.link ul li:nth-child(4) img {
+    width: 100%;
+    height: 100%;
+}
+
+.link ul li:nth-child(5) {
+    bottom: 60px;
+    left: 20%;
+    width: 285px;
+    height: 189px;
+    -webkit-transform: translate(0, 20%);
+    transform: translate(0, 20%);
+}
+
+.link ul li:nth-child(5) img {
+    width: 100%;
+    height: 100%;
+}
+
+.link ul li:nth-child(6) {
+    bottom: 0;
+    left: 53%;
+    width: 214px;
+    height: 142px;
+}
+
+.link ul li:nth-child(6) img {
+    width: 100%;
+    height: 100%;
+}
+
+.link ul li:nth-child(7) {
+    bottom: 104px;
+    right: 0;
+    height: 282px;
+    -webkit-transform: translate(20%, 0);
+    transform: translate(20%, 0);
+}
+
+.link ul li:nth-child(7) img {
+    max-width: 100%;
+    height: 100%;
+}
+
+.link ul li:nth-child(8) {
+    bottom: 10px;
+    left: 0;
+    width: 271px;
+    height: 180px;
+    -webkit-transform: translate(-30%, 50%);
+    transform: translate(-30%, 50%);
+}
+
+.link ul img {
+    width: 100%;
+    height: 100%;
+}
+
+.link img {
+    max-width: 100%;
 }
